--- a/df_connect_finance/config/connect-finance-source.properties
+++ b/df_connect_finance/config/connect-finance-source.properties
@@ -5,6 +5,6 @@ tasks.max=1
 symbols=AAPL,MSFT,FB,GOOGL,INTC,SSNLF,DATA
 portfolio=none
 interval=20
-topic=test_stock
+topic=stock
 schema.registry.uri=http://localhost:8081
 spoof=OTHER
