--- a/df_stream_flink/config/FileSink-quickstart.properties
+++ b/df_stream_flink/config/FileSink-quickstart.properties
@@ -2,7 +2,7 @@
 # Sample configuration for SchemaedFileSinkConnector
 #
 name=file-sink-test
-connector.class=com.datafibers.kafka.connect.SchemaedFileSinkConnector
+connector.class=com.datafibers.spark.stream.SchemaedFileSinkConnector
 topics=ktest
 file.format=${topic}
 output.type=json
