--- a/df_stream_flink/config/FileSource-quickstart.properties
+++ b/df_stream_flink/config/FileSource-quickstart.properties
@@ -9,7 +9,7 @@
 #		publish.rate: << UNSUPPORTED >>
 #
 name=file-source-test
-connector.class=com.datafibers.kafka.connect.SchemaedFileSourceConnector
+connector.class=com.datafibers.spark.stream.SchemaedFileSourceConnector
 topic=ftest1
 file=/Users/davidtucker/gitdev/dbtucker/kafka-connect-schemaedfile/testing/input.json
 input.type=json
