--- a/df_stream_flink/pom.xml
+++ b/df_stream_flink/pom.xml
@@ -5,12 +5,11 @@
     <parent>
         <groupId>com.datafibers</groupId>
         <artifactId>df_simple_stream</artifactId>
-        <version>${df.version}</version>
+        <version>0.1</version>
     </parent>
 
     <groupId>com.datafibers</groupId>
     <artifactId>df_stream_flink</artifactId>
-    <version>${df.version}</version>
     <packaging>jar</packaging>
 
     <name>df_stream_flink</name>
@@ -71,18 +70,6 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
