--- a/df_stream_spark/pom.xml
+++ b/df_stream_spark/pom.xml
@@ -5,12 +5,11 @@
     <parent>
         <groupId>com.datafibers</groupId>
         <artifactId>df_simple_stream</artifactId>
-        <version>${df.version}</version>
+        <version>0.1</version>
     </parent>
 
     <groupId>com.datafibers</groupId>
     <artifactId>df_stream_spark</artifactId>
-    <version>${df.version}</version>
     <packaging>jar</packaging>
 
     <name>df_stream_spark</name>
