--- a/df_connect_finance/config/connect-finance-source.properties
+++ b/df_connect_finance/config/connect-finance-source.properties
@@ -1,6 +1,6 @@
 name=yahoo-stock-source
 cuid=yahoo-stock-source
-connector.class=com.datafibers.flink.stream.FinanceSourceConnector
+connector.class=com.datafibers.kafka.connect.FinanceSourceConnector
 tasks.max=1
 symbols=AAPL,MSFT,FB,GOOGL,INTC,SSNLF,DATA
 portfolio=none
